apps/authentik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgres
  namespace: authentik
spec:
  selector:
    app: authentik-postgres
  ports:
    - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-redis
  namespace: authentik
spec:
  selector:
    app: authentik-redis
  ports:
    - port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
spec:
  selector:
    app: authentik-server
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: https
      port: 9443
      targetPort: 9443
